--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
